--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "EJS",
     "TailwindCSS"
   ],
-  "author": "Rahimuddin (Inspired by Mayk Brito)",
+  "author": "Rahimuddin",
   "license": "MIT",
   "dependencies": {
     "ejs": "^3.1.6",
